name:                jl
version:             0.1.0
synopsis:            Functional sed for JSON
description:         jl ("JSON lambda") is a tiny functional language for querying and manipulating JSON.
homepage:            https://github.com/chrisdone/jl#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2017 Chris Done
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall  -O2
  exposed-modules:
    JL
    JL.Parser
    JL.Tokenizer
    JL.Types
    JL.Inferer
    JL.Interpreter
    JL.Printer
    JL.Functions
    JL.Serializer
  build-depends:       base >= 4.7 && < 5, attoparsec, mtl, text, containers, aeson >=2, bytestring, vector, parsec, exceptions, text, containers, text, unordered-containers, scientific
  default-language:    Haskell2010

executable jl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -static
  build-depends:       base
                     , jl, text, aeson >=2, aeson-pretty, containers, bytestring, mtl, optparse-simple, vector, conduit, conduit-extra
  default-language:    Haskell2010
